# async-progressbar

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  async_progressbar.py  main.py  notebook.ipynb  play.py  pyproject.toml
.github/workflows/: publish-pypi.yml
.helix/: recent-files.txt
tests/: test_progressbar.py
