[project]
name = "async-play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.7",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "aiolimiter>=1.2.1",
    "basedpyright>=1.29.5",
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
    "ruff>=0.12.2",
    "tqdm>=4.67.1",
]
